fix: .language-text not breaking on mobile

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -6,6 +6,10 @@
   display: none;
 }
 
+.language-text {
+  overflow-wrap: break-word;
+}
+
 @media print {
   .hideInPrintView {
     display: none;
